@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-11T16:07:36Z",
-  "count_outdated" : 660,
-  "uniques_outdated" : 142,
+  "timestamp" : "2022-11-12T08:08:15Z",
+  "count_outdated" : 662,
+  "uniques_outdated" : 143,
   "count" : 697,
   "uniques" : 151,
   "views" : [
-    {
-      "timestamp": "2022-10-29T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-31T00:00:00Z",
       "count": 5,
