@@ -1,12 +1,7 @@
 {
-  "count": 37,
-  "uniques": 9,
+  "count": 35,
+  "uniques": 8,
   "views": [
-    {
-      "timestamp": "2022-10-29T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-31T00:00:00Z",
       "count": 5,
