@@ -1,3 +1,11 @@
+2022-11-12T08:08:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3450161411 # 1021
+* notice: last 14d: unq all: 8 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 142 660 / 151 697
+* notice: next accum: outdated-unq outdated-all / unq all: 143 662 / 151 697
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-29] / []
+
 2022-11-11T16:07:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3446376675 # 1019
 * notice: last 14d: unq all: 9 37
